Fix  alignment issues

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ img.avatar {
     background-color: var(--grey-bg);
     padding: 20px;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
     gap: 20px;
 }
 
@@ -178,7 +178,7 @@ img.avatar {
 
 .card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;
 }
 
